tests/errors/ref_in_struct.milo
// @error: references cannot be stored in structs
struct Bad {
    x: &i32,
}

fn main(): i32 {
    return 0
}
